# Pokerbots

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.website  Dockerfile.worker  README.md  bwrap.sh  common-compose.yml  dev-compose.yml  dev-nginx.conf.template  developing-bots.md  docker-compose.dev.yml  docker-compose.yml  elasticmq.conf  index.html  nginx.conf  nginx.conf.template  overview.md  styles.css  tailwind.config.js
.workflows/: rust.yml
app/: vite.config.ts
backend/: Cargo.toml  Dockerfile
bindings/: BotWithTeam.ts  CommunityCards.ts  Game.ts  GameError.ts  GameStateSQL.ts  GameWithBotsWithResult.ts  Team.ts
bots/: Dockerfile
builder/: Cargo.toml
deployment/: cdk.context.json  cdk.json
docs/: book.toml
example_bots/hole_card_equity/equity_calculator/: Cargo.toml
example_bots/hole_card_equity/equity_calculator/src/: main.rs
game/: Cargo.toml
pokergame/: Dockerfile  README.md
pokergame/worker/: Cargo.toml
pokergame/worker/runner_tests/cpp_compile_error/bot/: bot.json
pokergame/worker/runner_tests/python_ping/bot/: main.py
pokergame/worker/src/: bots.rs  lib.rs  main.rs
pokergame/worker/src/bots/: bot.rs  runner.rs
pokergame/worker/src/bots/bot/: languages.rs
pokergame/worker/src/bots/bot/languages/: cpp.rs  python.rs  rust.rs
pokergame/worker/src/poker/: game.rs
resources/: README.md  cdk.context.json  index.ts  package-lock.json  package.json
shared/: Cargo.toml  README.md
shared/bindings/: Bot.ts  BuildStatus.ts  Game.ts  TeamWithMembers.ts  WhichBot.ts  package.json
shared/migrations/2023-04-23-212141_remove_foreign_keys/: down.sql
shared/migrations/2023-05-05-191023_elo/: up.sql
shared/migrations/2023-05-16-203252_admin-users/: down.sql  up.sql
shared/migrations/2023-05-16-203605_games-table/: up.sql
shared/migrations/2023-05-19-183649_bots/: up.sql
shared/migrations/2023-05-21-022251_bot_challenges/: down.sql  up.sql
shared/migrations/2023-05-23-173659_detailed-game-results/: up.sql
shared/migrations/2023-06-20-001822_bot_build_result/: down.sql  up.sql
shared/migrations/2023-07-01-051644_fk_team_invite/: down.sql  up.sql
shared/migrations/2023-08-07-200044_fk_game_bots/: down.sql  up.sql
shared/migrations/2023-08-12-080435_fk_user_team/: down.sql  up.sql
shared/migrations/2023-08-13-234326_fk_bot_team/: down.sql  up.sql
shared/migrations/2023-08-21-045831_create_auth/: down.sql  up.sql
shared/migrations/2023-08-26-161252_move_auth/: down.sql  up.sql
shared/migrations/2023-08-26-163005_rename_links/: down.sql  up.sql
shared/migrations/2023-08-26-181834_rename_redundancy/: down.sql  up.sql
shared/migrations/2023-08-26-185905_persistent_delete/: down.sql  up.sql
shared/migrations/2023-08-26-191258_fk_team_owner/: down.sql  up.sql
shared/migrations/2023-08-27-041548_game-split-scores/: up.sql
shared/migrations/2023-08-27-041548_game_split_scores/: down.sql
shared/migrations/2023-08-28-020843_game_results_table/: down.sql  up.sql
shared/migrations/2023-08-29-051045_nullable_password/: down.sql  up.sql
shared/migrations/2023-09-02-024717_create_game_states/: down.sql  up.sql
shared/migrations/2023-09-02-184607_game_results_ratings/: down.sql  up.sql
shared/migrations/2023-09-04-014415_user_profile/: down.sql  up.sql
shared/migrations/2023-09-04-183007_anonymize_users/: down.sql  up.sql
shared/migrations/2023-09-08-204842_auth_unique_email/: down.sql  up.sql
shared/migrations/2023-09-09-174206_drop_profile_email/: down.sql  up.sql
shared/migrations/2023-09-10-060623_drop_resume_s3_key/: down.sql  up.sql
shared/migrations/2023-09-16-045937_team_elo/: down.sql  up.sql
shared/migrations/2023-09-16-062735_unrated_games/: down.sql  up.sql
shared/migrations/2023-10-02-041121_game_results_cascade_delete/: down.sql  up.sql
shared/migrations/2023-10-02-155733_auth_owns_user/: down.sql  up.sql
shared/migrations/2023-12-17-061548_game_states/: up.sql
shared/migrations/2023-12-23-162607_remove_error_bot/: down.sql  up.sql
shared/migrations/2023-12-28-060121_simplify_game_states/: down.sql  up.sql
shared/migrations/2024-01-02-015916_games_running/: down.sql  up.sql
shared/src/: db.rs  lib.rs  poker.rs  process.rs  s3.rs  sqs.rs
shared/src/db/: conn.rs  dao.rs  models.rs  schema.rs  schema_aliases.rs
shared/src/db/dao/: bots.rs  games.rs
shared/src/poker/: game.rs  hands.rs
website/backend/: Cargo.toml  README.md
website/backend/bindings/: BotsResponse.ts  GameLogQuery.ts  GamesResponse.ts  UserData.ts
website/backend/migrations/2023-05-05-191023_elo/: down.sql
website/backend/migrations/2023-05-16-203605_games-table/: up.sql
website/backend/migrations/2023-05-19-183649_bots/: down.sql
website/backend/migrations/2023-05-21-022251_bot_challenges/: up.sql
website/backend/migrations/2023-05-23-173659_detailed-game-results/: down.sql  up.sql
website/backend/migrations/2023-06-20-001822_bot_build_result/: down.sql  up.sql
website/backend/src/: app.rs  config.rs  games.rs  lib.rs  main.rs  models.rs  schema.rs
website/backend/src/app/: api.rs  login.rs  pages.rs
website/backend/src/app/api/: auth.rs  bots.rs  data.rs  games.rs  manage_team.rs  oauth.rs  profile.rs  signout.rs  team.rs
website/backend/src/app/pages/: common.rs  homepage.rs
website/backend/src/app/pages/common/: nav.rs
website/backend/src/emails/: email_verify.html  password_reset.html
website/backend/static/css/: common.css  homepage.css
website/backend/static/js/: common.js
workers/gameplay/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev-Dockerfile
workers/gameplay/src/: bots.rs  communication.rs  lib.rs  main.rs
workers/gameplay/src/bots/: sandbox.rs
workers/gameplay/src/bots/bot/: languages.rs
workers/gameplay/src/bots/bot/languages/: cpp.rs
workers/gameplay/src/bots/sandbox/: README.md
workers/gameplay/src/poker/: game.rs  hands.rs
workers/results/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  dev-Dockerfile
workers/results/src/: build_result.rs  game_result.rs  lib.rs  main.rs  matchmaking.rs  rating.rs
(+276 files in other folders)
