[package]
name = "pokerbots"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-files = { version = "0.6.2" }
actix-web = { version = "4.3.1" }
actix-multipart = "0.6.0"
actix-service = "2.0.2"
actix-session = {version = "0.7.2", features=["cookie-session"]}
log = "0.4"
env_logger = "0.10.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "with-deprecated"], default-features=false }
dotenvy = "0.15"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.26"
futures = "0.3.26"
chrono = "0.4.24"
url = "2.3.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.19"
aws-config = "0.55.2"
aws-sdk-s3 = "0.27.0"
diesel_migrations = {version= "2.0.0", features=["postgres"]}
lapin = "2.1.1"
shared = { path = "../../shared" }

[dev-dependencies]
cargo-watch = "8.4.0"
