[package]
name = "positive_ev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
gameplay = { path = "../../../workers/gameplay" }
itertools = "0.11.0"
rand = "0.8.5"
tokio = "1.33.0"

[workspace]
